---------------------------------------------------------------------------------------------------
Version: 1.9.0
Date: ???

  Features:
    - Custom attack group can now spawn in Space Exploration planets!
    - Custom attack group is now out of beta.

  Changes:
    - Added default values to setting tooltips

  Bugfixes:
    - Fixed a bug in attack group chunk processor's find_spawn_location()
    - Fixed an attack meter points calculation inaccuracy issue.

---------------------------------------------------------------------------------------------------
Version: 1.8.1
Date: 2021-09-30

  Changes:
    - "[Precision Strike] Enable for flying squad" is now default to ON
    - Added 90% option to Attack groups spawn chances.

  Bugfixes:
    - Added all variants of "Natural_Evolution_Enemies" to incompatible list.

---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: 2021-09-30

  Features:
    - Reworked custom attack group spawning position selection workflow.
    - Reworked custom attack group attack target selection workflow.
    - Added enemy damage modifier.
    - Base/Cold/Explosive/Armoured Biters now supports damage leveling. Good luck.

  Changes:
    - Changed Build style default setting to "Build a town".
    - Removed group_gathering_time_change. Use game default instead

  Bugfixes:
    - Fix global erm cache clean up function
    - Fix negative and positive race using opposite coordinates.

---------------------------------------------------------------------------------------------------
Version: 1.7.3
Date: 2021-09-14

  Bugfixes:
    - Fix an incorrect assignment of a cache value

---------------------------------------------------------------------------------------------------
Version: 1.7.2
Date: 2021-09-14

  Bugfixes:
    - Fix a game start up crash when Bio Industry enables.
