@@ -12,6 +12,7 @@ enemyracemanager-enemy-corpse-time=Enemy Corpse Decompose Time (minute) [img=inf
 enemyracemanager-level-multipliers=Enemy Strength Multiplier [img=info]
 enemyracemanager-max-hitpoint-multipliers=Enemy Max Hit Points Multiplier [img=info]
 enemyracemanager-damage-multipliers=Enemy Damage Multiplier [img=info]
+enemyracemanager-running-speed-multipliers=Enemy Running/Flying speed multiplier [img=info]
 enemyracemanager-max-gathering-groups=Max Auto Gathering Groups [img=info]
 enemyracemanager-max-group-size=Max Group Size [img=info]
 
@@ -53,6 +54,7 @@ enemyracemanager-enemy-corpse-time=The time that the enemy's corpses stay. This 
 enemyracemanager-level-multipliers=How strong enemy get for each level. This affects HP, resistance, damage and healing. \n\nRange: 3 - 20, Default: 5
 enemyracemanager-max-hitpoint-multipliers=Enemy hitpoints multiplier. \n\nRange: 5 - 100, Default: 10
 enemyracemanager-damage-multipliers=Enemy Damage Multiplier. \n\nRange: 1 - 10, Default: 1
+enemyracemanager-running-speed-multipliers=Enemy Running/Flying speed multiplier.  If you are using ultra long range turrets (K2 for example), you should adjust the enemy speed to have a fair fight.  \n\nRange: 1 - 3, Default: 1
 
 enemyracemanager-max-gathering-groups=Map setting: Max Gathering Group.  Base game defaults 30. Higher value may have performance implication.   \n\nRange: 5 - 60, Default: 15
 enemyracemanager-max-group-size=Map setting: Max Group Size.  Base game defaults 200. Higher value may have performance implication.  \n\nRange: 50 - 600, Default: 100
